# panda

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  build.sh  configure
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: local_tests.yml  parallel_tests.yml  publish_docker.yml
panda/debian/: .gitignore  control  setup.sh
panda/dependencies/: ubuntu_22.04_base.txt  ubuntu_22.04_build.txt  ubuntu_24.04_base.txt  ubuntu_24.04_build.txt
panda/plugins/: config.panda
panda/python/core/: .gitignore  MANIFEST.in  create_panda_datatypes.py  pyproject.toml  setup.py
panda/python/core/pandare/extras/: dwarfdump.py
panda/scripts/: apigen.py  install_ubuntu.sh  pp.py
qemu/: Makefile  Makefile.target  configure  console.c  console.h  cpu-all.h  cpu-common.h  cpu-defs.h  cpu-exec.c  cpus.c  cpus.h  disas.c  dyngen-exec.h  exec-all.h  exec.c  gen-icount.h  hmp-commands.hx  hmp.h  iohandler.c  ioport.c  main-loop.c  monitor.c  monitor.h  qapi-schema.json  qemu-options.hx  qemu-timer.c  qemu-timer.h  qerror.c  qerror.h  rules.mak  savevm.c  softmmu_defs.h  softmmu_template.h  sysemu.h  translate-all.c  vl.c
qemu/hw/: arm_boot.c  hw.h  pc.c  pc_piix.c  spapr_vio.h
qemu/linux-user/: elfload.c  main.c  syscall.c
qemu/slirp/: libslirp.h
qemu/target-arm/: helper.c  op_helper.c  translate.c
qemu/target-i386/: cpu.c  helper.c  helper.h  op_helper.c  ops_sse.h  translate.c
qemu/target-mips/: translate.c
qemu/target-sparc/: translate.c
qemu/tcg/: tcg-op.h  tcg.c  tcg.h
(+54 files in other folders)
